[lsdf] semi-final version

--- a/lsdf/main.tex
+++ b/lsdf/main.tex
@@ -19,10 +19,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \include{chapters/before}
 \include{chapters/django}
-\include{chapters/features}
+\input{chapters/features}
 \include{chapters/conclusion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% include cannot be nested, input can
+% include has caching benefits
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOURCES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -33,6 +35,6 @@
 \bibliography{references.bib}
 \end{frame}
 
-\include{chapters/additional}
+\input{chapters/additional}
 
 \end{document}
