--- a/lsdf/setup.tex
+++ b/lsdf/setup.tex
@@ -6,6 +6,8 @@
 \usepackage{pdfpages}
 % \usepackage[dvipsnames]{xcolor}
 \usepackage{arydshln}
+\usepackage{marvosym}
+\usepackage{caption}
 
 
 % \usepackage[outputdir=\detokenize{~/Coding/things-to-talk-about/lsdf/out/}]{minted}
@@ -186,6 +188,39 @@
 \maketitle
 \addtocounter{framenumber}{1}
 
+\begin{frame}[c]{What is the Large Scale Data Facility?}
+        % \small
+    \begin{multicols}{2}
+    \begin{itemize}[<+(1)->]
+        \item KIT-hosted storage for research
+        \item About 18 PetaByte (1PB = 1000 TB)
+        \item Can be accessed by most commonly used storage protocols (Samba, NFS, HTTPS/WebDav, SFTP, SCP, ...)
+        \item Direct integration with e.g. HoReKa and other HPC-systems
+    \includegraphics[width=0.4\textwidth,center]{LSDF_Logo}
+        \item For KIT, Baden-Württemberg, and worldwide partnered researchers
+        \item Financed by MWK BW, KIT, and Helmholtz-Society
+        % \item LSDF-Portal: {\em administration} of storage projects
+    \end{itemize}
+    % \includegraphics[width=0.4\textwidth,center]{storage1}
+    \end{multicols}
+\end{frame}
+
+\begin{frame}[c]{Who am I?}
+    \begin{multicols}{2}
+        \begin{itemize}[<+(1)->]
+            \item Got my Bachelors in 2020 from the University of Freiburg
+            \item For Master at KIT since WS2020
+            \item Working student and freelancer
+            \item Using Django since mid-2021 (about 4 months before praktikum kickoff)
+            \item Main Interests: Programming, Statistics (ML), Biotechnology
+            \item Current Hobbies: Reading, Competitive Dancing, Automation
+        \end{itemize}
+        \begin{figure}
+        \includegraphics[height=0.75\textheight,center]{picture_self} \\
+        \caption*{Felix Karg}
+        \end{figure}
+    \end{multicols}
+\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Agenda
