[lsdf] about to present

--- a/lsdf/setup.tex
+++ b/lsdf/setup.tex
@@ -213,7 +213,7 @@
             \item Working student and freelancer
             \item Using Django since mid-2021 (about 4 months before praktikum kickoff)
             \item Main Interests: Programming, Statistics (ML), Biotechnology
-            \item Current Hobbies: Reading, Competitive Dancing, Automation
+            \item Current Hobbies: Reading, Dancing, Automation
         \end{itemize}
         \begin{figure}
         \includegraphics[height=0.75\textheight,center]{picture_self} \\
