[transformer] made progress building presentation

--- a/transformer/main.tex
+++ b/transformer/main.tex
@@ -2,7 +2,7 @@
 
 
 \title{Attention is All You Need}
-\subtitle{overview of the transformer architecture, applications and improvements}
+\subtitle{overview of the transformer architecture, applications and established improvements}
 \author{Felix Karg}
 
 
@@ -11,6 +11,8 @@
 \newif\iftwocols
 % \twocolsfalse
 \twocolstrue
+
+% \setbeamertemplate{caption}{\insertcaption}
 
 \include{setup}
 
@@ -29,8 +31,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % \include{chapters/overview}
-\include{chapters/background}
-% \include{chapters/introduction}
+% \include{chapters/background}
+% \include{chapters/embedding}
+% \include{chapters/attention}
+\include{chapters/transformer}
+\include{chapters/compression}
+% \include{chapters/successes}
 % \include{chapters/conclusion}
 
 % '\include'
