[transformer] continue building presentation

--- a/transformer/main.tex
+++ b/transformer/main.tex
@@ -34,9 +34,10 @@
 % \include{chapters/background}
 % \include{chapters/embedding}
 % \include{chapters/attention}
-\include{chapters/transformer}
+% \include{chapters/transformer}
 \include{chapters/compression}
-% \include{chapters/successes}
+\include{chapters/successes}
+% \include{chapters/limitations}
 % \include{chapters/conclusion}
 
 % '\include'
