[transformer] final presentation

--- a/transformer/setup.tex
+++ b/transformer/setup.tex
@@ -1,5 +1,6 @@
 \usepackage{etex}
 \usepackage{graphicx}
+\usepackage{color}
 \usepackage[export]{adjustbox}
 \usepackage{multicol}
 \usepackage{pdfpcnotes}
