--- a/transformer/main.tex
+++ b/transformer/main.tex
@@ -30,15 +30,15 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \include{chapters/overview}
-% \include{chapters/background}
-% \include{chapters/embedding}
-% \include{chapters/attention}
-% \include{chapters/transformer}
+\include{chapters/overview}
+\include{chapters/background}
+\include{chapters/embedding}
+\include{chapters/attention}
+\include{chapters/transformer}
 \include{chapters/compression}
 \include{chapters/successes}
-% \include{chapters/limitations}
-% \include{chapters/conclusion}
+\include{chapters/limitations}
+\include{chapters/conclusion}
 
 % '\include'
 % - gives speed bonus when building, through caching in a seperate *.aux file
@@ -63,6 +63,6 @@
 \bibliography{references.bib}
 \end{frame}
 
-% \include{chapters/additional}
+\include{chapters/additional}
 
 \end{document}
