[transformer] small changes

--- a/transformer/main.tex
+++ b/transformer/main.tex
@@ -36,6 +36,7 @@
 \include{chapters/attention}
 \include{chapters/transformer}
 \include{chapters/compression}
+\include{chapters/module}
 \include{chapters/successes}
 \include{chapters/limitations}
 \include{chapters/conclusion}
