[transformer] update most chapters

--- a/transformer/setup.tex
+++ b/transformer/setup.tex
@@ -182,6 +182,9 @@
 % \definecolor{orang1}{RGB}{, , 0} % #663400
 \definecolor{orang1}{RGB}{193, 98, 0} % #c16200
 
+\newcommand{\gray}[1]{
+    \textcolor[gray]{0.65}{#1}
+}
 
 \newcommand{\green}[1]{
     \textcolor{green1}{#1}
