[transformer] basically (second) final presentation

--- a/transformer/main.tex
+++ b/transformer/main.tex
@@ -36,8 +36,8 @@
 \include{chapters/attention}
 \include{chapters/transformer}
 \include{chapters/compression}
-\include{chapters/module}
 \include{chapters/successes}
+\include{chapters/extensions}
 \include{chapters/limitations}
 \include{chapters/conclusion}
 
