[pointnet] small comments

--- a/pointnet/main.tex
+++ b/pointnet/main.tex
@@ -8,6 +8,8 @@
 \include{setup.tex}
 
 
+% TODO: convert all \pnote to english. Why did I not do that before
+
 \include{chapters/motivation.tex} % done
 \include{chapters/related.tex}    % done
 \include{chapters/challenges.tex} % done
